# git-projects

./: .cruft.json  .gitignore  CLAUDE.md  LICENSE  PATTERNS_git-proj.md  README.md  pyproject.toml  tasks.py
.claude/commands/: architect.md  commit.md  feature.md  implement.md
docs/: architecture.md  review.md  user-stories.md
docs/features/: fetch-dual-urls.md  fetch-rich-output.md  gitea-foundry.md  github-repo-import.md  gitlab-foundry.md  info-command.md  init-command.md  split-projects-json.md  sync-command.md
src/git_projects/: __init__.py  cli.py  config.py  formatting.py  gitops.py  index.py  registry.py  services.py
src/git_projects/foundry/: __init__.py  gitea.py  github.py  gitlab.py
tests/: test_cli.py  test_config.py  test_formatting.py  test_github.py  test_gitops.py  test_index.py  test_registry.py  test_services.py  test_sync.py
