[project]
name = "git-proj"
version = "0.1.0"
description = "Discover, track, and sync Git repos across GitHub, GitLab, and Gitea"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Jev Kuznetsov", email = "jev.kuznetsov@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["git", "github", "gitlab", "gitea", "sync", "cli", "workspace-manager", "multi-repo", "developer-tools", "git-automation", "forge-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.0",
    "pyyaml>=6.0.3",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/sjev/git-projects"
Repository = "https://github.com/sjev/git-projects"

[project.scripts]
gpr = "git_projects.cli:app"

[tool.uv.build-backend]
module-name = "git_projects"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bump-my-version>=0.31",
    "invoke>=2.2.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "I", "C4", "TID", "SIM", "PLE", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103",  # Missing docstrings
    "N806", "N803",  # Invalid name patterns
    "G201",  # Logging f-string interpolation
    "ARG001",  # Unused function argument
    "BLE001",  # Blind except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Allow unused arguments in tests

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
